# serpeo

./: .autorc  .gitignore  .syncpackrc.js  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: beige-memes-send.md  brave-rabbits-change.md  chilly-impalas-ring.md  common-candles-dress.md  cuddly-tips-sink.md  fair-doors-taste.md  few-geese-know.md  gentle-teeth-drive.md  good-planets-report.md  great-cases-stay.md  hungry-tools-sneeze.md  lucky-hands-end.md  new-cities-relate.md  plain-cameras-leave.md  plenty-lines-speak.md  real-geckos-build.md  real-pumas-shine.md  rotten-rocks-guess.md  rude-goats-hang.md  shy-lines-look.md  silent-pillows-brush.md  sixty-donuts-switch.md  smart-baboons-smile.md  smart-bobcats-matter.md  sour-maps-ask.md  spotty-terms-tie.md  ten-turkeys-reply.md  whole-bananas-act.md  wide-experts-yawn.md
.cursor/rules/: duplication.mdc  general.mdc  rust-async-development-rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/ci-setup/: action.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: appstore-release.yml  auto.yml  base_benchmarks.yml  benchmarks.yml  build.yml  pr_benchmarks.yml  pr_benchmarks_closed.yml  publish.yml  release.yml  test-build.yml  typecheck.yaml
apps/serp-derp/: package.json  vite.config.ts
apps/serp-derp/src-tauri/: Cargo.toml  tauri.conf.json
apps/serp-derp/src-tauri/src/: lib.rs  main.rs
apps/serp-derp/src/components/custom/: radial-chart.tsx
apps/serp-derp/src/routes/: index.tsx
apps/serpeo/: CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/serpeo/scripts/: fix-icons.ts
apps/serpeo/src/: bindings.ts  main.tsx  routeTree.gen.ts  store.ts
apps/serpeo/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/serpeo/src-tauri/icons/: icon.icns
apps/serpeo/src-tauri/src/: lib.rs  lighthouse_analyzer.rs  main.rs  seo_analyzers.rs  sites.rs
apps/serpeo/src-tauri/src/listeners/: mod.rs
apps/serpeo/src-tauri/src/stores/: crawl_settings.rs  mod.rs
apps/serpeo/src/atoms/: crawl-result.ts  settings.ts
apps/serpeo/src/components/analysis-progress/: index.tsx
apps/serpeo/src/components/analysis-status/: index.tsx
apps/serpeo/src/components/analyze-seo-input/: index.tsx  use-analyze-seo-input.tsx
apps/serpeo/src/components/display/: severity-badge.tsx
apps/serpeo/src/components/display/issue-category-detail/: index.tsx
apps/serpeo/src/components/display/issue-category-overview/: index.tsx
apps/serpeo/src/components/display/link-display/: index.tsx
apps/serpeo/src/components/layout/nav-bar/: index.tsx
apps/serpeo/src/components/providers/: index.tsx
apps/serpeo/src/components/settings/card/: index.tsx
apps/serpeo/src/components/settings/form/: index.tsx
apps/serpeo/src/components/sites/overview/: index.tsx  overview-chart.tsx
apps/serpeo/src/queries/: sites.tsx
apps/serpeo/src/routes/: __root.tsx  about.tsx  index.tsx  settings.tsx
apps/serpeo/src/routes/analysis/: $site-run-id.tsx  $siteRunId.tsx  index.tsx  route.tsx
apps/serpeo/src/routes/analysis/sites/: index.tsx
apps/serpeo/src/routes/settings/: index.tsx  route.tsx
apps/serpeo/src/tests/: sample.test.ts
crates/html-parser/: Cargo.toml
crates/html-parser/src/: lib.rs  page_parser.rs
crates/seo-analyzer/: Cargo.toml
crates/seo-analyzer/src/: analyze_html.rs  analyzer.rs  config.rs  crawler.rs  lib.rs  lighthouse.rs
crates/seo-plugins/: Cargo.toml
crates/seo-plugins/benches/: analyze_bench.rs
crates/seo-plugins/src/: lib.rs  site_analyzer.rs
crates/seo-plugins/src/plugins/: axe.rs  html.rs  image.rs  meta_description.rs  mod.rs  network_request.rs  request.rs  seo_basic.rs  title.rs
crates/seo-plugins/src/site_plugins/: meta_description.rs  mod.rs  orphaned_page.rs
crates/seo-plugins/src/utils/: config.rs  crawl_config.rs  link_parser.rs  mod.rs  page.rs  page_plugin.rs  registry.rs  site.rs  site_plugin.rs  sitemap_parser.rs
crates/seo-storage/: Cargo.toml  README.md  sqlite.db
crates/seo-storage/migration/: Cargo.toml
crates/seo-storage/migration/src/: lib.rs  m20250514_154203_create_site_table.rs  m20250514_171121_create_site_run_table.rs  m20250514_211317_create_site_page_table.rs  m20250514_214902_create_page_rule_result_table.rs  m20250516_171758_create_plugin_rule_table.rs  m20250516_193257_update_page_rule_result.rs
crates/seo-storage/src/: lib.rs  migrations.rs
crates/seo-storage/src/entities/: mod.rs  page_rule_result.rs  plugin_rule.rs  prelude.rs  site.rs  site_page.rs  site_run.rs
crates/seo-storage/src/enums/: db_link_type.rs  mod.rs  plugin_rule_enums.rs  site_run_status.rs
crates/seo-storage/src/utils/: category_counts.rs  category_detail.rs  mod.rs  sites_with_site_runs.rs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  seo_analyzer.rs
src-tauri/src/seo_analyzer/: lighthouse.rs  mod.rs
src/routes/: index.tsx
turbo/generators/: config.ts
turbo/generators/templates/: plugin.rs.hbs  site_plugin.rs.hbs
