[workspace]
members = ["apps/serpeo/src-tauri", "crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full", "tracing"] }
tauri = { version = "2.5.1" }
thiserror = "1.0"
specta = { version = "2.0.0-rc.22", features=["chrono"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
hyper = { version = "0.14", features = ["full"] }
scraper = "0.23.1"
url = "2.5.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
roxmltree = "0.19.0"
tempfile = "3.10.1"
async-trait = "0.1"
once_cell = "1.19"
criterion = {version = "0.5", features=["async_futures"]}
seo-plugins = { path = "crates/seo-plugins" }
seo-analyzer = { path = "crates/seo-analyzer" }
seo-storage = { path = "crates/seo-storage" }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
