[package]
name = "html-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
futures = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tauri = { workspace = true }
tauri-specta = { workspace = true }
url = { workspace = true }
once_cell = {workspace = true}


[dev-dependencies]
hyper = { workspace = true }
