[package]
name = "seo-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
scraper = "0.18.1"
url = "2.5.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
roxmltree = "0.19.0"
tempfile = "3.10.1"
async-trait = "0.1"
specta = { workspace=true }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }