[package]
name = "seo-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
seo-plugins = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

async-trait = { workspace = true }
specta = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }


[lints.clippy]
unwrap_used = "deny"